[gd_scene load_steps=41 format=3 uid="uid://ddusvf1o8rfkx"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_28e3r"]
[ext_resource type="Texture2D" uid="uid://pbw1c0og5w8v" path="res://Textures/PlayerCharacter.png" id="1_hjwha"]
[ext_resource type="Theme" uid="uid://dvxg1y76ows4c" path="res://UI/MainTheme.tres" id="3_eeyme"]
[ext_resource type="Texture2D" uid="uid://bm7by5y4i7c8" path="res://Textures/ControllerBase.png" id="3_huect"]
[ext_resource type="Script" path="res://Scripts/AbilitiesMinigame.gd" id="3_n67tv"]
[ext_resource type="Texture2D" uid="uid://c2hsx5a8vhmtl" path="res://Textures/AbilityCursor.png" id="4_g260v"]
[ext_resource type="Script" path="res://Scripts/Abilities/Jump.gd" id="5_43ry6"]
[ext_resource type="Texture2D" uid="uid://blvqpa77nvkkt" path="res://Textures/ActionPlate.png" id="5_5805e"]
[ext_resource type="Texture2D" uid="uid://oglkrc5qlhqo" path="res://Textures/Abilities/Jump.png" id="5_qydy8"]
[ext_resource type="Script" path="res://Scripts/Abilities/Dash.gd" id="7_xhdwk"]
[ext_resource type="Texture2D" uid="uid://dqhrufx411585" path="res://Textures/Abilities/Dash.png" id="9_dwmky"]
[ext_resource type="Script" path="res://Scripts/Abilities/Hover.gd" id="10_dfwt3"]
[ext_resource type="Texture2D" uid="uid://byo3567ultd7e" path="res://Textures/Abilities/Hover.png" id="11_w5u6o"]
[ext_resource type="Script" path="res://Scripts/Abilities/SuperJump.gd" id="12_egriw"]
[ext_resource type="Texture2D" uid="uid://dgqqsgqfua43b" path="res://Textures/Abilities/SuperJump.png" id="12_p0ldp"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_durot"]
size = Vector2(10, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_llpdq"]
atlas = ExtResource("1_hjwha")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_tl3dw"]
atlas = ExtResource("1_hjwha")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_3aqf3"]
atlas = ExtResource("1_hjwha")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ltfhn"]
atlas = ExtResource("1_hjwha")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xlf8e"]
atlas = ExtResource("1_hjwha")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6omq"]
atlas = ExtResource("1_hjwha")
region = Rect2(0, 16, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_n6mo2"]
atlas = ExtResource("1_hjwha")
region = Rect2(16, 16, 16, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_miidu"]
animations = [{
"frames": [{
"duration": 8.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 8.0,
"texture": SubResource("AtlasTexture_tl3dw")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 4.0,
"texture": SubResource("AtlasTexture_tl3dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl3dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl3dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl3dw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_llpdq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tl3dw")
}],
"loop": false,
"name": &"Activate",
"speed": 20.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3aqf3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ltfhn")
}],
"loop": true,
"name": &"Idle",
"speed": 2.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_xlf8e")
}],
"loop": true,
"name": &"Jump",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6omq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_n6mo2")
}],
"loop": true,
"name": &"Run",
"speed": 10.0
}]

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_7hcjh"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
direction = Vector3(-1, -0.5, 0)
spread = 29.15
initial_velocity_min = 12.2
initial_velocity_max = 43.7
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_g7k7x"]
lifetime_randomness = 0.2
particle_flag_disable_z = true
direction = Vector3(0, -1, 0)
spread = 29.15
gravity = Vector3(0, 0, 0)
initial_velocity_min = 12.2
initial_velocity_max = 43.7
orbit_velocity_min = 0.0
orbit_velocity_max = 0.0

[sub_resource type="Animation" id="Animation_ywmkr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(160, 270)]
}

[sub_resource type="Animation" id="Animation_qv21w"]
resource_name = "Slide"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:offset")
tracks/0/interp = 2
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(160, 90), Vector2(160, 270)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r673f"]
_data = {
"RESET": SubResource("Animation_ywmkr"),
"Slide": SubResource("Animation_qv21w")
}

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mggqk"]
size = Vector2(80, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_mlp7w"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qce1i"]
size = Vector2(80, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2j87p"]
size = Vector2(16, 48)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_6u6ve"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qscau"]
size = Vector2(80, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_akgil"]
size = Vector2(48, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0mvsy"]
size = Vector2(16, 32)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bnyks"]
size = Vector2(16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_nqyhw"]
size = Vector2(4, 96)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_esqlg"]
size = Vector2(96, 4)

[node name="Player" type="CharacterBody2D"]
collision_layer = 3
script = ExtResource("1_28e3r")
move_speed = 128.0
acceleration = 256.0
air_control = 0.25

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_durot")

[node name="Camera2D" type="Camera2D" parent="."]
process_callback = 0
limit_bottom = 240
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_miidu")
animation = &"Jump"
autoplay = "Activate"

[node name="Particles" type="Node2D" parent="."]

[node name="MoveParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0.25098, 0.294118, 0.152941, 1)
position = Vector2(0, 8)
emitting = false
process_material = SubResource("ParticleProcessMaterial_7hcjh")
lifetime = 0.2

[node name="SlideParticles" type="GPUParticles2D" parent="Particles"]
modulate = Color(0, 0, 0, 1)
position = Vector2(0, 8)
emitting = false
process_material = SubResource("ParticleProcessMaterial_g7k7x")
lifetime = 0.2

[node name="StatusBars" type="Control" parent="."]
z_index = 3
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -8.0
offset_top = -16.0
offset_right = 8.0
offset_bottom = 16.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("3_eeyme")

[node name="SuperJump" type="ProgressBar" parent="StatusBars"]
visible = false
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -4.0
grow_horizontal = 2
grow_vertical = 0
show_percentage = false

[node name="Hover" type="ProgressBar" parent="StatusBars"]
visible = false
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 4.0
grow_horizontal = 2
show_percentage = false

[node name="Abilities" type="CanvasLayer" parent="."]
layer = 2
offset = Vector2(160, 270)
transform = Transform2D(1, 0, 0, 1, 160, 270)
script = ExtResource("3_n67tv")
slow_time = 0.063

[node name="AnimationPlayer" type="AnimationPlayer" parent="Abilities"]
playback_process_mode = 2
libraries = {
"": SubResource("AnimationLibrary_r673f")
}

[node name="ControllerBase" type="Sprite2D" parent="Abilities"]
texture = ExtResource("3_huect")

[node name="JumpAbility" type="Area2D" parent="Abilities" node_paths=PackedStringArray("player")]
position = Vector2(-96, 64)
script = ExtResource("5_43ry6")
player = NodePath("../..")
metadata/_edit_group_ = true

[node name="Jump" type="Sprite2D" parent="Abilities/JumpAbility"]
texture = ExtResource("5_qydy8")

[node name="ActionPlate" type="Sprite2D" parent="Abilities/JumpAbility"]
position = Vector2(0, -32)
texture = ExtResource("5_5805e")

[node name="ActionPlate2" type="Sprite2D" parent="Abilities/JumpAbility"]
position = Vector2(-32, 0)
texture = ExtResource("5_5805e")

[node name="ActionPlate3" type="Sprite2D" parent="Abilities/JumpAbility"]
position = Vector2(32, 0)
texture = ExtResource("5_5805e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/JumpAbility"]
shape = SubResource("RectangleShape2D_mggqk")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Abilities/JumpAbility"]
position = Vector2(0, -24)
shape = SubResource("RectangleShape2D_mlp7w")

[node name="DashAbility" type="Area2D" parent="Abilities" node_paths=PackedStringArray("player")]
position = Vector2(96, -64)
script = ExtResource("7_xhdwk")
player = NodePath("../..")
metadata/_edit_group_ = true

[node name="ActionPlate" type="Sprite2D" parent="Abilities/DashAbility"]
position = Vector2(-32, 0)
texture = ExtResource("5_5805e")

[node name="ActionPlate2" type="Sprite2D" parent="Abilities/DashAbility"]
position = Vector2(32, 0)
texture = ExtResource("5_5805e")

[node name="Dash" type="Sprite2D" parent="Abilities/DashAbility"]
texture = ExtResource("9_dwmky")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/DashAbility"]
shape = SubResource("RectangleShape2D_qce1i")

[node name="HoverAbility" type="Area2D" parent="Abilities" node_paths=PackedStringArray("hover_bar", "player")]
position = Vector2(-96, -32)
script = ExtResource("10_dfwt3")
hover_bar = NodePath("../../StatusBars/Hover")
player = NodePath("../..")
metadata/_edit_group_ = true

[node name="Hover" type="Sprite2D" parent="Abilities/HoverAbility"]
texture = ExtResource("11_w5u6o")

[node name="ActionPlate" type="Sprite2D" parent="Abilities/HoverAbility"]
position = Vector2(32, -32)
texture = ExtResource("5_5805e")

[node name="ActionPlate2" type="Sprite2D" parent="Abilities/HoverAbility"]
position = Vector2(0, -32)
texture = ExtResource("5_5805e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/HoverAbility"]
position = Vector2(0, -16)
shape = SubResource("RectangleShape2D_2j87p")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Abilities/HoverAbility"]
position = Vector2(24, -32)
shape = SubResource("RectangleShape2D_6u6ve")

[node name="SuperJumpAbility" type="Area2D" parent="Abilities" node_paths=PackedStringArray("super_jump_bar", "player")]
position = Vector2(96, 64)
script = ExtResource("12_egriw")
super_jump_bar = NodePath("../../StatusBars/SuperJump")
player = NodePath("../..")
metadata/_edit_group_ = true

[node name="SuperJump" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
texture = ExtResource("12_p0ldp")

[node name="ActionPlate" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(-32, 0)
texture = ExtResource("5_5805e")

[node name="ActionPlate2" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(0, -32)
texture = ExtResource("5_5805e")

[node name="ActionPlate3" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(32, 0)
texture = ExtResource("5_5805e")

[node name="ActionPlate4" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(32, -32)
texture = ExtResource("5_5805e")

[node name="ActionPlate5" type="Sprite2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(32, -64)
texture = ExtResource("5_5805e")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/SuperJumpAbility"]
shape = SubResource("RectangleShape2D_qscau")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(16, -24)
shape = SubResource("RectangleShape2D_akgil")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Abilities/SuperJumpAbility"]
position = Vector2(32, -56)
shape = SubResource("RectangleShape2D_0mvsy")

[node name="Cursor" type="Area2D" parent="Abilities"]
z_index = 2
monitorable = false

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/Cursor"]
shape = SubResource("RectangleShape2D_bnyks")

[node name="AbilityCursor" type="Sprite2D" parent="Abilities/Cursor"]
z_index = 2
texture = ExtResource("4_g260v")

[node name="ControllerBoundary" type="Area2D" parent="Abilities"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Abilities/ControllerBoundary"]
position = Vector2(50, 0)
shape = SubResource("RectangleShape2D_nqyhw")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="Abilities/ControllerBoundary"]
position = Vector2(-50, 0)
shape = SubResource("RectangleShape2D_nqyhw")

[node name="CollisionShape2D3" type="CollisionShape2D" parent="Abilities/ControllerBoundary"]
position = Vector2(0, -50)
shape = SubResource("RectangleShape2D_esqlg")

[node name="CollisionShape2D4" type="CollisionShape2D" parent="Abilities/ControllerBoundary"]
position = Vector2(0, 50)
shape = SubResource("RectangleShape2D_esqlg")

[node name="PauseMenu" type="CanvasLayer" parent="."]
process_mode = 2
layer = 3

[node name="ColorRect" type="ColorRect" parent="PauseMenu"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.14902, 0.14902, 0.14902, 0.662745)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenu"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Label" type="Label" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Paused"
horizontal_alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "Resume"

[node name="ToMenuButton" type="Button" parent="PauseMenu/VBoxContainer"]
layout_mode = 2
text = "To Menu"

[connection signal="pressed" from="PauseMenu/VBoxContainer/ResumeButton" to="." method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenu/VBoxContainer/ToMenuButton" to="." method="_on_to_menu_button_pressed"]
